css and lfz modal tweaks

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -87,11 +87,6 @@ ul > li {
     justify-content: flex-end;
 }
 
-.editMode > .edit_input {
-    margin-bottom: 2% !important;
-}
-
-
 .binderWrap{
      width: 100%;
      margin-top: 0;
@@ -309,38 +304,28 @@ ul > li {
     margin: 1%;
 }
 
-input.edit_input_binder{
-    font-size: 1.75rem !important;
+input#edit_input_binder{
+    font-size: 1.75rem;
     color: #fafafa;
     margin-left: 2%;
     
 }
 
-input.edit_input_binder:focus, input.edit_input_tab:focus, {
-    border-bottom: 1px solid #0288d1 !important;
-    padding-left: 2%;
-}
-
-input.edit_input_page:focus {
-    border-bottom: 1px solid #fafafa !important;
-    padding-left: 2%;
-}
-
-input.edit_input_page::selection{
+input#edit_input_page::selection{
     background-color: #fafafa;
     color: black;
     font-weight: 500;
 }
 
-input.edit_input_tab{
+input#edit_input_tab{
     padding-left: 3%;
-    font-size: 1.5rem !important;
+    font-size: 1.5rem;
     color: black;
 }
 
-input.edit_input_page{
+input#edit_input_page{
     padding-left: 5%;
-    font-size: 1rem !important;
+    font-size: 1rem;
     color: #fafafa;
 }
 
