--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -4,10 +4,11 @@
 /*}*/
 
 .mobileNav {
-    position: absolute;
-    bottom: 0%;
+    position: fixed;
+    bottom: -2.2%;
     width: 100%;
-    height: 7vh;
+    height: 8vh;
+    background-color: white;
 } 
 
 .mobileNav> li{
