--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -39,8 +39,9 @@ body {
 }
 .btn.sample{
     background-color: #12d0e9;
-    margin-top: 5%; 
-
+    margin-top: 25px;
+    border-radius: 5px;
+    width: 40%;
 }
 .blur {
     position: absolute;
@@ -77,7 +78,7 @@ body {
 .info h3 {
     position: relative;
     top: 5vh;
-    font-size: 4vmin;
+    font-size: 2rem;
 }
 .google-div {
     color: #fff;
@@ -99,8 +100,8 @@ body {
     text-align: left;
     line-height: 5.5vh;
     width: 70%;
-    margin: 0 auto;
-    font-size: 3vmin;
+    margin: 15px auto;
+    font-size: 1.25rem;
 }
 .item-list li {
     white-space: nowrap;
