--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -14,19 +14,13 @@
     height: 100%;
 }
 
-.notes-component-toolbar {
-    height: 11.5%;
-
-}
-
 .notes-component.fifth-step{
-    height: 88%; 
+    height: 88%;
     overflow-y: auto;
 }
 
 .toolbar {
     width: 100%;
-    height: 100%;
     position: relative;
     top: 0;
     right: 0;
@@ -35,22 +29,25 @@
     background-color: #455a64;
     box-shadow: 0 5px 5px #999;
     z-index: 1;
-    padding: 1.5% 1% 1% 1%;
+    padding: 0 1em;
 }
 
 .stylingButtons {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-between;
     height: 40%;
-    width: 60%;
+    width: 100%;
+    padding-top: 1.5em;
 }
 
 .styleSquare {
-    height: 80%;
+    height: 2.5em;
+    width: 2.5em;
     cursor: pointer;
     color: white;
+    text-align: center;
 }
 
 .styleSquare:hover{
@@ -59,18 +56,103 @@
 }
 
 .material-icons.notesIcons {
-    font-size: 3vmin;
+    font-size: 2.5em;
     margin: 0;
-}
-
-.search-box {
-    height: 40%;
-    width: 60%;
-    margin-right: 20%;
-    display: inline-block;
 }
 
 .search-input.keyword {
     background-color: #eceff1;
-    height: 100%; 
+    height: 2.5em;
+    width: 20em;
+    padding-left: 2%;
+    margin-top: 0;
+}
+
+.link, .image {
+    margin-top: 0;
+}
+
+@media only screen and (max-width: 1426px) {
+    .styleSquare {
+        height: 2.3em;
+        width: 2.3em;
+    }
+
+    .material-icons.notesIcons {
+        font-size: 2.3em;
+    }
+
+    .search-input.keyword {
+        height: 2.3em;
+        margin-left: 0;
+    }
+}
+
+@media only screen and (max-width: 1385px) {
+    .search-input.keyword {
+        margin-top: 0.7em;
+    }
+}
+
+@media only screen and (max-width: 974px) {
+    .stylingButtons {
+        justify-content: flex-start;
+    }
+
+    .search-input.keyword {
+        width: 17em;
+    }
+
+    .material-icons.image {
+        margin-top: 0.3em;
+    }
+}
+
+@media only screen and (max-width: 935px) {
+    .material-icons.link {
+        margin-top: 0.3em;
+    }
+}
+
+@media only screen and (max-width: 919px) {
+    .search-input.keyword {
+        margin-top: 0.7em;
+    }
+
+    .material-icons.image, .material-icons.link {
+        margin-top: 0;
+    }
+}
+
+@media only screen and (max-width: 830px) {
+    .search-input.keyword {
+        width: 13em;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .stylingButtons {
+        justify-content: space-between;
+    }
+
+    .search-input.keyword {
+        margin-top: 0;
+    }
+}
+
+@media only screen and (max-width: 574px) {
+    .search-input.keyword {
+        margin-top: 0.7em;
+        width: 20em;
+    }
+}
+
+@media only screen and (max-width: 382px) {
+    .stylingButtons {
+        justify-content: flex-start;
+    }
+
+    .material-icons.image {
+        margin-top: 0.3em;
+    }
 }
