--- a/client/src/assets/css/landing-page.css
+++ b/client/src/assets/css/landing-page.css
@@ -1,6 +1,7 @@
-body {
-    box-sizing: border-box;
-}
+/*body {*/
+    /*box-sizing: border-box;*/
+/*}*/
+
 .top-background-layer {
     background-color: #000;
     opacity: 0.4;
