--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -436,3 +436,18 @@ footer {
         margin: 3% 4% 0 4%;
     }
 }
+
+/*--------------- reactour ---------------*/
+
+.dIYoXw {
+    background-color: white;
+    height: 0;
+}
+
+.bIMCVx:focus {
+    background-color: white;
+}
+
+.mobile-icon {
+
+}
