added styling to code format

--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -15,6 +15,14 @@
     height: 100%;
 }
 
+code {
+    display: inline-block;
+    background-color: #d5d5d5;
+    color: #0288d1;
+    padding: 0 0.5em;
+    font-family: 'Overpass Mono' !important;
+}
+
 .notes-component.fifth-step{
     height: 88%;
     overflow-y: auto;
