--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -45,6 +45,7 @@ a {
 
 .lfzLogo:hover{
     filter: brightness(150%) drop-shadow(1px 1px 1px #333333);
+    cursor: pointer;
 }
 
 .lfzLogo:active{
@@ -366,6 +367,7 @@ input#edit_input_page{
     padding-left: 5%;
     font-size: 1rem;
     color: #fafafa;
+    
 }
 
 .binder-container {
@@ -461,6 +463,7 @@ footer {
         width: 10%;
         left: 85%;
         top: 1.5%;
+
     }
     .modal-content.modal-nav{
         position: absolute;
