landscape navigation complete

--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -27,6 +27,12 @@
     color: #0288d1;
 }
 
+@media screen and (max-width: 767px) and (orientation:landscape){
+    .mobileNav{
+        height: initial;
+    }
+}
+
 
 /*------------ MOBILE TOUR ------------*/
 
