--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -480,6 +480,24 @@ footer {
 
 }
 
+@media screen and (max-width: 767px) and (orientation:landscape){
+    .binder-container{
+        height: 50vh;
+        margin-top: 3%;
+    }
+    footer{
+        height: 10%;   
+    }
+
+    .lfzLogo{
+        width: 8%;
+    }
+
+    .logoImage{
+        width: 6%;
+    }
+}
+
 @media (max-width: 480px) {
     /* footer {
         height: 70px;
