page padding change

--- a/client/src/assets/css/navbar.css
+++ b/client/src/assets/css/navbar.css
@@ -496,6 +496,10 @@ footer {
     .logoImage{
         width: 6%;
     }
+
+    .pageLink{
+        padding-bottom: 5%;
+    }
 }
 
 @media (max-width: 480px) {
