--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -213,25 +213,25 @@ blockquote {
 .fontColor-options {
     display: none;
     position: absolute;
-    height: 10em;
-    width: 20em;
+    height: 3.8em;
+    width: 6em;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
     background-color: darkgray;
-    padding: 0.3em 0.5em;
+    padding: 0.3em 0 0 0.3em;
+
 }
 
 /* Links inside the dropdown */
 .fontColor-options .fontColor {
     float: none;
-    padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
 /* Add a grey background color to dropdown links on hover */
-.fontColor-options .fontColor:hover {
+.fontColor-options {
     background-color: #ddd;
 }
 
@@ -244,11 +244,46 @@ blockquote {
 }
 
 .fontColor {
-    width: 0.5em;
-    height: 0.5em;
-    margin: 0.2em 0;
+    width: 1.8em;
+    height: 1.8em;
+    padding-right: 1%;
+    margin: 0;
+}
+
+.redFont .colorCircles {
+    color: #FF0000;
+    font-size: 150%;
+}
+
+.orangeFont .colorCircles {
+    color: #FF7F00;
+    font-size: 150%;
+}
+
+.yellowFont .colorCircles {
+    color: #FFFF00;
+    font-size: 150%;
+}
+
+.greenFont .colorCircles {
+    color: #00FF00;
+    font-size: 150%;
+}
+
+.blueFont .colorCircles {
+    color: #0000FF;
+    font-size: 150%;
+}
+
+.violetFont .colorCircles {
+    color: #9400D3;
+    font-size: 150%;
 }
 
 .fontOptions {
     display: inline-block;
+}
+
+.colorCircles:hover {
+    cursor: pointer
 }
