--- a/client/src/assets/css/dashboard.css
+++ b/client/src/assets/css/dashboard.css
@@ -40,3 +40,29 @@
 .reactour__helper.reactour__helper--is-open.sc-ifAKCX.cfrXTn {
    margin-left: -20% !important;
 }
+
+.loader-container{
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    z-index: 4000;
+}
+
+.preloader-wrapper.active{
+    position: absolute;
+    top: 40%;
+    left: 5%;
+}
+
+@media (max-width: 767px){
+    .preloader-wrapper.active{
+        position: absolute;
+        top: 40%;
+        left: 50%;
+    }
+
+}
