--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -32,6 +32,12 @@
   padding-bottom: 0;
   position: relative;
   top: -3vh;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2),
+    0 6px 20px 5px rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2),
+    0 6px 20px 5px rgba(0, 0, 0, 0.19);
 }
 
 .video-container#video-container .row form {
@@ -308,7 +314,8 @@ button.close {
 }
 @media screen and (max-width: 375px) and (orientation: portrait) {
   .video-container iframe {
-    height: 82vh;
+    width: 100%;
+    height: 85vh;
   }
   .video-container#video-container {
     height: 95%;
@@ -345,7 +352,7 @@ button.close {
 @media screen and (max-width: 740px) and (orientation: landscape) {
   .video-container#video-container {
     text-align: center;
-    height: 80%;
+    height: 81%;
     padding-bottom: 0;
     position: relative;
     top: -13vh;
@@ -353,5 +360,8 @@ button.close {
   .video-slide-out-input {
     height: 25vh;
     top: -3vh;
+  }
+  .video-container iframe {
+    width: 100%;
   }
 }
