--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -2,7 +2,6 @@
     height: 100%;
     box-sizing: border-box;
     background-color: ghostwhite;
-
 }
 
 .emoji {
@@ -13,6 +12,11 @@
     height: 100%;
     overflow: hidden;
     margin-bottom: -500em;
+}
+
+.fontOptions {
+    height: 40px;
+    width: 15%;
 }
 
 .editor {
@@ -173,7 +177,7 @@ blockquote {
     }
 }
 
-/*--------------------------- HOVER OPTIONS ---------------------------*/
+/*--------------------------- COLOR/EMOJI OPTIONS ---------------------------*/
 
 .hoverOptions {
     float: left;
@@ -276,4 +280,25 @@ blockquote {
 
 .textAreaEmoji {
     cursor: pointer;
+}
+
+/*--------------------------- FONT OPTIONS ---------------------------*/
+
+.font-dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.font-styles {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.font-dropdown:hover .font-styles {
+    display: block;
 }
