made toolbar unwrappable

--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -35,7 +35,7 @@
 .stylingButtons {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     height: 40%;
     width: 100%;
