--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -27,8 +27,9 @@
   height: 100%;
 }
 .video-container#video-container {
+  overflow: hidden;
   text-align: center;
-  height: 90%;
+  height: 100%;
   padding-bottom: 0;
   position: relative;
   top: -3vh;
@@ -119,7 +120,6 @@ button.close {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1;
   border: none;
 }
 .video-btn i {
@@ -201,14 +201,16 @@ button.close {
 .Pane.horizontal.Pane2 {
   height: 325px;
 }
-.video-container iframe,
+.video-container iframe {
+  height: 90%;
+  width: 93%;
+}
 .slides-iframe {
   width: 93%;
   top: -8vh;
 }
 #video-iframe {
-  top: 0vh;
-  /* height: 90% */
+  top: 3px;
 }
 #video-container {
   height: 90%;
