--- a/client/src/assets/css/video.css
+++ b/client/src/assets/css/video.css
@@ -84,6 +84,9 @@ button.close {
   border-left: 1px solid #e4e4e4;
   z-index: 5000;
 }
+.material-icons {
+  user-select: none;
+}
 .row.results-input-container {
   margin-left: 0;
   margin-right: 0;
